Updated session 1 solution

--- a/session1/easy/solution.ipynb
+++ b/session1/easy/solution.ipynb
@@ -2,16 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from collections import defaultdict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,6 +34,21 @@
     "def decode(message:str)->str:\n",
     "    \"\"\"Cypher is symmetrical so encode/decode should be the same.\"\"\"\n",
     "    return encode(message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check it works\n",
+    "assert(encode('ABCD')== 'GBCE')\n",
+    "assert(encode('Ava has a cat')=='Gvg hgs g cgt')\n",
+    "assert(encode(\"gaderypoluki\")=='agedyropulki')\n",
+    "assert(decode(\"Gvg hgs g cgt\")=='Ava has a cat')\n",
+    "assert(decode(\"agedyropulki\")=='gaderypoluki')\n",
+    "assert(decode(\"GBCE\")=='ABCD')\n"
    ]
   },
   {
