--- a/session1/hard/solution.ipynb
+++ b/session1/hard/solution.ipynb
@@ -23,24 +23,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'agdeikluopry'"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "messages = [\"dance on the table\", \"hide my beers\", \"scouts rocks\"]\n",
     "secrets = [\"egncd pn thd tgbud\" ,\"hked mr bddys\" ,\"scplts ypcis\" ]\n",
-    "find_the_key(messages, secrets)"
+    "assert(find_the_key(messages, secrets)=='agdeikluopry')"
    ]
   }
  ],
